--- a/ansible/roles/php7/tasks/main.yml
+++ b/ansible/roles/php7/tasks/main.yml
@@ -8,7 +8,7 @@
 
 - name: Install PHP 7 extensions
   apt:
-    name: php7.0-{{ item }}
+    name: "{{ item }}"
     state: present
   with_items: extensions
   sudo: yes
